@@ -177,7 +177,7 @@ void SendDataToModule(XEvent *eventp,Window w,FvwmWindow *tmp_win,
   char *message, msg2[32];
   char *match;                          /* matching criteria for module cmds */
   int match_len = 0;                    /* get length once for efficiency */
-  int n = nColorsets;
+  int n;
   char *ImagePath = GetImagePath();
 
   GetNextToken(action, &match);
@@ -199,9 +199,9 @@ void SendDataToModule(XEvent *eventp,Window w,FvwmWindow *tmp_win,
     SendName(*Module,M_CONFIG_INFO,0,0,0,msg2);
   }
 #endif
-  /* now dump the colorsets (in reverse order to minimize mallocing lots) */
-  while (n--)
-    SendName(*Module, M_CONFIG_INFO, 0, 0, 0, DumpColorset(n));
+  /* now dump the colorsets (0 first as others copy it) */
+  for (n = 0; n < nColorsets; n++)
+    SendName(*Module, M_CONFIG_INFO, 0, 0, 0, DumpColorset(n, &Colorset[n]));
 
   /* Dominik Vogt (8-Nov-1998): Scr.ClickTime patch to set ClickTime to
    * 'not at all' during InitFunction and RestartFunction. */
