@@ -22,3 +22,4 @@
  ***********************************************************************/
 char *safemalloc(int length);
 char *safecalloc(int num, int length);
+char *saferealloc(char *ptr, int length);
