@@ -34,7 +34,5 @@
  */
 
 /* Function Prototypes */
-char *safemalloc(int length);
-char *saferealloc(char *ptr, size_t length);
 void UpdateString(char **string,const char *value);
 
